update view and mobile app config

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "description": "Fisherbook",
+  "description": "Task list",
   "author": "Caio Augusto Peixer da Silva - Bit Wizard",
   "private": true,
   "scripts": {
